--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@prisma/client": "^5.14.0",
+    "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
+    "iron-session": "^8.0.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
