--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "iron-session": "^8.0.1",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
